Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjTextObjRetText.quorum
class Main
    action Main
        Yoda<Text, Text, Text> yoda
        Text y = yoda:useForce("green", "green")
        output "passed"
     end
end
