Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjBooleanRetTextFail.quorum
class Main
    action Main
        Yoda<Text, Text, boolean> yoda
        integer y = yoda("green", "green", 66)
     end
end
